[package]
name = "altio"
version = "0.2.0"
edition = "2021"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = [ "piped", "io", "redirect", "automate", "expect" ]
readme = "README.md"
repository = "https://github.com/oooutlk/altio"
documentation = "https://docs.rs/altio"
categories = [ "command-line-interface", "command-line-utilities" ]
description = "Automating command tools by simulating piped io in process."

[features]
default = ["altio"]
altio = []
