[package]
name = "altio_test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altio = { path = "../altio" }
once_cell = { version = "1.19.0", optional = true }

[features]
default = ["altio"]
altio = ["once_cell"]
